# smng

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  commands.h  completion.bash  config.def.h  manpage.1  smng.1  sql.h  todo.txt  tools.c  tools.h
lang/: de.json  en.json
smng_lib/: Cargo.toml
smng_lib/src/: cfg.rs  cmd.rs  cmdinfo.rs  data.rs  db.rs  init.rs  lang.rs  lib.rs
smng_record/: Cargo.toml
smng_record/src/: main.rs
src/: Makefile  app.h  app.rs  build.rs  cmd-template.rs  cmd.rs  cmdhistory.rs  commands.c  commands.h  commands.rs  config.def.h  constants.h  data.rs  db.rs  edit-record-begin.rs  edit-record-project.rs  lang.rs  main.c  main.rs  oldcmd.rs  record.rs  sql.h  sql.rs  status.rs  stop.rs  tools.c  tools.h  tools.rs
src/.cargo/: config.toml
src/cfg/: mod.rs
src/cmd/: mod.rs
src/data/: mod.rs  projects.rs  records.rs
src/db/: mod.rs
src/lib/: cmd.rs
xtask/: Cargo.toml
xtask/src/: main.rs
