[package]
name = "smng"
version = "2.3.1"
authors = ["SchokiCoder <afschoknecht@gmail.com>"]
repository = "https://github.com/SchokiCoder/smng"
edition = "2018"
license = "GPLv3"
publish = false

# record is in bin

#[[bin]]
#name = "smng-stop"
#path = "src/stop.rs"

#[[bin]]
#name = "smng-status"
#path = "src/status.rs"

#[[bin]]
#name = "smng-edit-record-project"
#path = "src/edit-record-project.rs"

#[[bin]]
#name = "smng-edit-record-begin"
#path = "src/edit-record-begin.rs"

#[[bin]]
#name = "smng-edit-record-end"
#path = "src/edit-record-end.rs"

#[[bin]]
#name = "smng-edit-record-description"
#path = "src/edit-record-description.rs"

#[[bin]]
#name = "smng-"
#path = "src/.rs"

[dependencies]
sqlite = "0.26.*"
chrono = "0.4.*"
term_size = "0.3.*"

clap = { version = "4.0.*", features = ["derive", "cargo"] }

[build-dependencies]
clap_mangen = "0.2.*"
