[workspace]
members = [
	"smng_lib",
	"smng_record",
]

[workspace.package]
version = "2.3.1"
authors = ["SchokiCoder <afschoknecht@gmail.com>"]
repository = "https://github.com/SchokiCoder/smng"
edition = "2018"
license = "GPLv3"
publish = false

[workspace.dependencies]
sqlite = "0.26.*"
chrono = "0.4.*"
term_size = "0.3.*"
clap = { version = "4.0.*", features = ["derive", "cargo"] }
i18n_codegen = "0.1.*"
clap_mangen = "0.2.*"

