[package]
name = "xtask"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
smng-lib = { path = "../smng_lib" }
clap.workspace = true
clap_mangen.workspace = true
clap_complete.workspace = true

